--- a/index.html
+++ b/index.html
@@ -20,13 +20,22 @@
         :root {
             --bg-dark: #121212; --bg-card: #1e1e1e; --sidebar-bg: #181818;
             --border: #2a2a2a; --text-main: #ffffff; --text-dim: #888888;
-            --accent: #333333; --iphone-radius: 50px; --pill: 100px; 
+            --accent: #333333; --iphone-radius: 50px; --pill: 100px;
+            --input-bg: #000000; --save-bg: #ffffff; --save-text: #000000;
         }
+
+        body.light-mode {
+            --bg-dark: #f2f2f7; --bg-card: #ffffff; --sidebar-bg: #ffffff;
+            --border: #d1d1d6; --text-main: #000000; --text-dim: #8e8e93;
+            --accent: #e5e5ea; --input-bg: #ffffff; --save-bg: #000000; --save-text: #ffffff;
+        }
+
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body {
             margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, sans-serif;
             background-color: var(--bg-dark); color: var(--text-main); height: 100vh;
             display: flex; flex-direction: column; overflow: hidden;
+            transition: background 0.3s;
         }
         
         /* Auth Screen */
@@ -35,7 +44,7 @@
             display: flex; flex-direction: column; align-items: center; justify-content: center;
         }
         .google-btn {
-            background: #ffffff; color: #000; border: none; padding: 18px 36px;
+            background: var(--save-bg); color: var(--save-text); border: none; padding: 18px 36px;
             border-radius: var(--pill); font-weight: 700; font-size: 16px; cursor: pointer;
         }
 
@@ -48,34 +57,36 @@
             display: flex; align-items: center; justify-content: space-between;
         }
         #planner-tabs { display: flex; gap: 10px; overflow-x: auto; scrollbar-width: none; flex: 1; }
-        .nav-tab { padding: 10px 20px; border-radius: var(--pill); color: var(--text-dim); font-size: 14px; font-weight: 600; cursor: pointer; white-space: nowrap; }
-        .nav-tab.active { background: var(--accent); color: white; border: 1px solid var(--border); }
-        .nav-actions { display: flex; align-items: center; gap: 15px; padding-left: 10px; }
-        .logout-btn { color: #ff453a; font-size: 11px; font-weight: 800; text-transform: uppercase; cursor: pointer; }
+        .nav-tab { padding: 8px 16px; border-radius: var(--pill); color: var(--text-dim); font-size: 13px; font-weight: 600; cursor: pointer; white-space: nowrap; }
+        .nav-tab.active { background: var(--accent); color: var(--text-main); border: 1px solid var(--border); }
+        .nav-actions { display: flex; align-items: center; gap: 12px; padding-left: 10px; }
+        .logout-btn { color: #ff453a; font-size: 10px; font-weight: 800; text-transform: uppercase; cursor: pointer; }
 
         /* Content Area */
-        #content { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 240px; }
+        #content { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 220px; }
         #list-label { font-size: 10px; color: var(--text-dim); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px; display: block; }
         .entry-card {
             background: var(--bg-card); border: 1px solid var(--border); border-radius: 25px;
             padding: 18px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center;
         }
 
-        /* Floating Island Footer */
+        /* Slimmed Floating Island */
         #footer {
-            position: fixed; bottom: 10px; left: 8px; right: 8px;
-            background: rgba(30, 30, 30, 0.98); backdrop-filter: blur(40px); -webkit-backdrop-filter: blur(40px);
-            border: 1px solid var(--border); border-radius: var(--iphone-radius);
-            padding: 18px 18px 6px 18px; display: flex; flex-direction: column; gap: 10px; z-index: 1000;
+            position: fixed; bottom: 10px; left: 10px; right: 10px;
+            background: var(--bg-card); opacity: 0.98; backdrop-filter: blur(40px); -webkit-backdrop-filter: blur(40px);
+            border: 1px solid var(--border); border-radius: 35px;
+            padding: 15px 15px 6px 15px; display: flex; flex-direction: column; gap: 10px; z-index: 1000;
         }
-        .input-row { display: flex; gap: 10px; width: 100%; }
+        .input-row { display: flex; gap: 8px; width: 100%; align-items: center; }
         input { 
-            background: #000 !important; border: 1px solid var(--border); color: #ffffff !important; 
-            padding: 12px 15px; border-radius: var(--pill); flex: 1; font-size: 15px;
-            height: 48px; -webkit-appearance: none; display: flex; align-items: center;
+            background: var(--input-bg) !important; border: 1px solid var(--border); 
+            color: var(--text-main) !important; border-radius: 20px; font-size: 14px;
+            height: 44px; -webkit-appearance: none;
         }
-        #itemDate::-webkit-date-and-time-value { color: white !important; text-align: left; min-height: 20px; }
-        .save-btn { background: #ffffff; color: #000; border: none; padding: 16px; border-radius: var(--pill); font-weight: 900; cursor: pointer; text-transform: uppercase; }
+        #itemName { flex: 2; padding: 0 15px; }
+        #itemDate { flex: 1; max-width: 115px; padding: 0 10px; text-align: center; }
+        #itemDate::-webkit-date-and-time-value { color: inherit !important; text-align: center; font-size: 12px; }
+        .save-btn { background: var(--save-bg); color: var(--save-text); border: none; padding: 12px; border-radius: 20px; font-weight: 900; font-size: 13px; cursor: pointer; text-transform: uppercase; }
 
         /* Calendar Overlay */
         #calendar-view {
@@ -84,18 +95,17 @@
         }
         .cal-header { display: flex; justify-content: space-between; align-items: center; padding: 25px; }
         .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px; padding: 15px; }
-        .cal-day-label { color: var(--text-dim); font-size: 11px; text-align: center; font-weight: bold; margin-bottom: 5px; }
+        .cal-day-label { color: var(--text-dim); font-size: 11px; text-align: center; font-weight: bold; }
         .cal-cell {
             aspect-ratio: 1; background: var(--bg-card); border-radius: 12px;
             display: flex; flex-direction: column; align-items: center; justify-content: center;
-            font-size: 15px; position: relative; border: 1px solid transparent;
+            font-size: 15px; position: relative; border: 1px solid var(--border);
         }
-        .cal-cell.has-event { border-color: #444; }
-        .event-dot { width: 5px; height: 5px; background: #ffffff; border-radius: 50%; position: absolute; bottom: 6px; }
-        .cal-today { background: #ffffff; color: #000; font-weight: bold; }
+        .event-dot { width: 5px; height: 5px; background: var(--text-main); border-radius: 50%; position: absolute; bottom: 6px; }
+        .cal-today { background: var(--save-bg); color: var(--save-text); font-weight: bold; }
     </style>
 </head>
-<body>
+<body class="dark-mode">
 
 <div id="login-overlay">
     <h1 style="font-size: 32px; letter-spacing: -1.5px;">DarkPlan Pro</h1>
@@ -106,8 +116,9 @@
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div class="nav-actions">
-            <div style="font-size: 20px; cursor: pointer;" onclick="toggleCalendar()">📅</div>
-            <div style="color: var(--text-dim); font-size: 28px; cursor: pointer;" onclick="createNewList()">+</div>
+            <div id="theme-icon" style="font-size: 18px; cursor: pointer;" onclick="toggleTheme()">☀️</div>
+            <div style="font-size: 18px; cursor: pointer;" onclick="toggleCalendar()">📅</div>
+            <div style="color: var(--text-dim); font-size: 26px; cursor: pointer;" onclick="createNewList()">+</div>
             <div class="logout-btn" onclick="handleLogout()">Out</div>
         </div>
     </div>
@@ -123,7 +134,7 @@
             <input type="text" id="itemDate" placeholder="Date" onfocus="(this.type='date')" onblur="if(!this.value) this.type='text'">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -5px;">TAP ABOVE TO SAVE ENTRY</div>
+        <div style="text-align:center; font-size: 8px; color: var(--text-dim); margin-top: -5px;">TAP TO SAVE ENTRY</div>
     </div>
 
     <div id="calendar-view">
@@ -132,7 +143,6 @@
             <div style="color: #ff453a; font-weight: 800; font-size: 14px; cursor: pointer;" onclick="toggleCalendar()">CLOSE</div>
         </div>
         <div id="calendar-grid" class="cal-grid"></div>
-        <div style="padding: 20px; color: var(--text-dim); font-size: 12px; text-align: center;">White dots indicate tasks across all lists.</div>
     </div>
 </div>
 
@@ -151,7 +161,21 @@
     const db = firebase.firestore();
     const provider = new firebase.auth.GoogleAuthProvider();
 
-    // AUTH
+    function toggleTheme() {
+        const body = document.body;
+        const icon = document.getElementById('theme-icon');
+        if (body.classList.contains('light-mode')) {
+            body.classList.remove('light-mode');
+            icon.innerText = '☀️';
+            localStorage.setItem('theme', 'dark');
+        } else {
+            body.classList.add('light-mode');
+            icon.innerText = '🌙';
+            localStorage.setItem('theme', 'light');
+        }
+    }
+    if (localStorage.getItem('theme') === 'light') toggleTheme();
+
     function popLogin() { auth.signInWithPopup(provider).catch(e => alert(e.message)); }
     function handleLogout() { if(confirm("Sign out?")) auth.signOut(); }
 
@@ -188,7 +212,6 @@
         dateInput.value = ''; dateInput.type = 'text';
     }
 
-    // CALENDAR LOGIC
     function toggleCalendar() {
         const cal = document.getElementById('calendar-view');
         const isVisible = cal.style.display === 'flex';
@@ -202,23 +225,16 @@
         const now = new Date();
         const month = now.getMonth();
         const year = now.getFullYear();
-
         label.innerText = now.toLocaleString('default', { month: 'long', year: 'numeric' });
         const firstDay = new Date(year, month, 1).getDay();
         const daysInMonth = new Date(year, month + 1, 0).getDate();
-
         grid.innerHTML = ['S','M','T','W','T','F','S'].map(d => `<div class="cal-day-label">${d}</div>`).join('');
         for (let i = 0; i < firstDay; i++) grid.innerHTML += `<div></div>`;
-
         for (let d = 1; d <= daysInMonth; d++) {
             const dateStr = `${year}-${String(month + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}`;
             const hasTask = allEntries.some(e => e.date === dateStr);
             const isToday = d === now.getDate() && month === new Date().getMonth();
-            grid.innerHTML += `
-                <div class="cal-cell ${isToday ? 'cal-today' : ''} ${hasTask ? 'has-event' : ''}">
-                    ${d}
-                    ${hasTask ? '<div class="event-dot"></div>' : ''}
-                </div>`;
+            grid.innerHTML += `<div class="cal-cell ${isToday ? 'cal-today' : ''}"> ${d} ${hasTask ? '<div class="event-dot"></div>' : ''} </div>`;
         }
     }
 
