--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         }
         #app { display: none; flex-direction: column; height: 100%; }
         
-        /* CLEANED UP HEADER */
+        /* REFINED HEADER WITH CALENDAR */
         #nav-bar {
             background-color: var(--sidebar-bg); border-bottom: 1px solid var(--border);
             padding: 15px; padding-top: calc(10px + env(safe-area-inset-top)); 
-            display: flex; align-items: center; justify-content: space-between; gap: 10px;
+            display: flex; align-items: center; justify-content: space-between;
         }
         #planner-tabs { display: flex; gap: 8px; overflow-x: auto; scrollbar-width: none; flex: 1; }
         #planner-tabs::-webkit-scrollbar { display: none; }
@@ -47,8 +47,9 @@
         .nav-tab { padding: 8px 16px; border-radius: var(--pill); color: var(--text-dim); font-size: 14px; font-weight: 600; cursor: pointer; white-space: nowrap; }
         .nav-tab.active { background: var(--accent); color: white; border: 1px solid var(--border); }
 
-        .header-actions { display: flex; align-items: center; gap: 12px; color: var(--text-dim); }
-        .out-btn { color: #ff453a; font-weight: 800; font-size: 12px; cursor: pointer; padding-left: 5px; }
+        .header-actions { display: flex; align-items: center; gap: 15px; margin-left: 10px; }
+        .icon-btn { font-size: 18px; cursor: pointer; }
+        .out-text { color: #ff453a; font-weight: 900; font-size: 12px; cursor: pointer; }
 
         #content { flex: 1; overflow-y: auto; padding: 20px; padding-bottom: 240px; }
         #list-label { font-size: 10px; color: var(--text-dim); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 15px; display: block; }
@@ -58,7 +59,7 @@
             padding: 18px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center;
         }
 
-        /* PILL FOOTER WITH RED GAP REMOVED */
+        /* PILL FOOTER - ZERO GAP VERSION */
         #footer {
             position: fixed; bottom: 8px; left: 8px; right: 8px;
             background: rgba(30, 30, 30, 0.98); backdrop-filter: blur(40px);
@@ -92,8 +93,9 @@
     <div id="nav-bar">
         <div id="planner-tabs"></div>
         <div class="header-actions">
-            <span onclick="createNewList()" style="font-size: 24px; cursor: pointer;">+</span>
-            <span onclick="auth.signOut()" class="out-btn"> SIGN OUT</span>
+            <span class="icon-btn">Calendar View</span>
+            <span onclick="createNewList()" class="icon-btn" style="font-weight:bold;">+</span>
+            <span onclick="auth.signOut()" class="out-text"> SIGN OUT</span>
         </div>
     </div>
     
@@ -108,7 +110,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -2px; letter-spacing: 0.5px;">TAP ABOVE TO SAVE ENTRY</div>
+        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -2px;">TAP ABOVE TO SAVE ENTRY</div>
     </div>
 </div>
 
