--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
         .header-actions { display: flex; align-items: center; gap: 12px; margin-left: 10px; }
         .icon-btn { font-size: 18px; cursor: pointer; }
         
-        /* New White Pill Signout */
         .out-pill { 
-            background: white; color: black; padding: 6px 12px; 
+            background: white; color: black; padding: 6px 14px; 
             border-radius: var(--pill); font-weight: 800; font-size: 11px; 
             cursor: pointer; text-transform: uppercase;
         }
@@ -64,28 +63,33 @@
             padding: 18px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center;
         }
 
-        /* TIGHTER FOOTER TO ELIMINATE GAP */
+        /* FOOTER FIX */
         #footer {
             position: fixed; 
-            bottom: 0px; left: 8px; right: 8px;
+            bottom: 0px; left: 0px; right: 0px; /* Full width for zero gap */
             background: rgba(30, 30, 30, 0.98); backdrop-filter: blur(40px);
             -webkit-backdrop-filter: blur(40px);
-            border: 1px solid var(--border); 
-            border-bottom: none; /* Helps sit flush */
-            border-radius: 40px 40px 0 0; /* Flat bottom for zero gap */
-            padding: 18px; 
-            padding-bottom: calc(10px + env(safe-area-inset-bottom));
-            display: flex; flex-direction: column; gap: 10px; z-index: 1000;
+            border-top: 1px solid var(--border); 
+            border-radius: 40px 40px 0 0;
+            padding: 20px; 
+            padding-bottom: calc(15px + env(safe-area-inset-bottom));
+            display: flex; flex-direction: column; gap: 12px; z-index: 1000;
         }
-        .input-row { display: flex; gap: 8px; width: 100%; }
-        input { 
+        .input-row { display: flex; gap: 10px; width: 100%; align-items: center; }
+        
+        /* Fixed Input Widths */
+        input[type="text"] { 
             background: #000; border: 1px solid var(--border); color: white; 
-            padding: 14px 18px; border-radius: var(--pill); flex: 1; font-size: 14px; min-width: 0;
+            padding: 14px 18px; border-radius: var(--pill); flex: 2; font-size: 14px; min-width: 0;
         }
-        input[type="date"] { color-scheme: dark; flex: 0.6; }
+        input[type="date"] { 
+            background: #000; border: 1px solid var(--border); color: white; 
+            padding: 14px 12px; border-radius: var(--pill); flex: 1.2; font-size: 14px; 
+            min-width: 100px; color-scheme: dark; display: block;
+        }
 
         .save-btn { 
-            background: #ffffff; color: #000; border: none; padding: 15px; 
+            background: #ffffff; color: #000; border: none; padding: 16px; 
             border-radius: var(--pill); font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 14px;
         }
     </style>
@@ -118,7 +122,7 @@
             <input type="date" id="itemDate">
         </div>
         <button class="save-btn" onclick="saveTask()">Add to List</button>
-        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -2px;">TAP ABOVE TO SAVE ENTRY</div>
+        <div style="text-align:center; font-size: 9px; color: var(--text-dim); margin-top: -2px; letter-spacing: 0.5px;">TAP ABOVE TO SAVE ENTRY</div>
     </div>
 </div>
 
