--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             padding: 18px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center;
         }
 
-        /* Full Width Grounded Pill */
         #footer {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: rgba(30, 30, 30, 0.98); backdrop-filter: blur(40px);
@@ -54,40 +53,45 @@
             border-radius: 30px 30px 0 0;
             padding: 20px; 
             padding-bottom: calc(20px + env(safe-area-inset-bottom));
-            display: flex; flex-direction: column; gap: 10px; z-index: 1000;
+            display: flex; flex-direction: column; gap: 12px; z-index: 1000;
         }
 
         .input-row { display: flex; gap: 8px; width: 100%; align-items: center; }
         
+        /* Fixed Height for vertical alignment */
         input[type="text"] { 
             background: #000; border: 1px solid var(--border); color: white; 
-            padding: 14px 18px; border-radius: 15px; font-size: 15px; flex: 1;
+            padding: 0 18px; border-radius: 15px; font-size: 15px; flex: 1;
+            height: 48px; /* Force vertical size */
         }
 
-        /* UPDATED: Wider Date Box with clear text */
         input[type="date"] { 
             position: relative;
             color-scheme: dark; 
             background: #000; border: 1px solid var(--border);
             color: white; border-radius: 15px; 
-            padding: 14px; font-size: 14px;
-            width: 145px; /* Increased from 125px */
+            padding: 0 14px; font-size: 13px;
+            width: 140px;
+            height: 48px; /* Must match text input height */
             text-align: center;
+            display: flex; align-items: center; justify-content: center;
         }
 
-        /* This handles the "SET DATE" preview on iOS */
         input[type="date"]::before {
             content: "SET DATE";
             position: absolute; color: var(--text-dim);
-            left: 0; right: 0; top: 14px; text-align: center;
+            left: 0; right: 0; 
+            top: 50%; transform: translateY(-50%); /* Perfect vertical center */
+            text-align: center;
             background: #000; pointer-events: none;
+            font-weight: 600;
         }
         input[type="date"]:focus::before,
         input[type="date"]:valid::before { display: none; }
 
         .save-btn { 
             width: 100%; background: #ffffff; color: #000; border: none; 
-            padding: 16px; border-radius: 15px; font-weight: 900; 
+            height: 50px; border-radius: 15px; font-weight: 900; 
             text-transform: uppercase; font-size: 14px; cursor: pointer;
         }
 
@@ -98,7 +102,7 @@
 
 <div id="login-overlay">
     <h1 style="color:white; font-size:32px; margin-bottom:20px;">DarkPlan</h1>
-    <button class="save-btn" style="width:auto; padding:15px 40px;" onclick="popLogin()">Sign in with Google</button>
+    <button class="save-btn" style="width:auto; padding:0 40px;" onclick="popLogin()">Sign in with Google</button>
 </div>
 
 <div id="app">
