--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             padding: 20px; 
             padding-bottom: calc(20px + env(safe-area-inset-bottom));
             display: flex; flex-direction: column; gap: 12px; z-index: 1000;
+            margin-top: 20px;
         }
 
         .input-row { display: flex; gap: 8px; width: 100%; align-items: center; }
@@ -91,7 +92,7 @@
 
         .save-btn { 
             width: 100%; background: #ffffff; color: #000; border: none; 
-            height: 50px; border-radius: 15px; font-weight: 900; 
+            height: 50px; border-radius: 50px; font-weight: 900; 
             text-transform: uppercase; font-size: 14px; cursor: pointer;
         }
 
@@ -110,7 +111,7 @@
         <div id="planner-tabs"></div>
         <div class="header-btns">
             <span onclick="createNewList()" style="font-size: 24px; color: var(--text-dim); cursor: pointer;">+</span>
-            <div onclick="auth.signOut()" class="out-btn">OUT</div>
+            <div onclick="auth.signOut()" class="out-btn">SIGN OUT</div>
         </div>
     </div>
     
