--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>DarkPlan Pro</title>
 
+    <link rel="apple-touch-icon" href="https://your-icon-url.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
@@ -13,7 +17,7 @@
         :root {
             --bg-dark: #121212; --bg-card: #1e1e1e; --sidebar-bg: #181818;
             --border: #2a2a2a; --text-main: #ffffff; --text-dim: #888888;
-            --accent: #333333; --pill: 100px; 
+            --accent: #333333; --radius: 15px; /* Control all box roundness here */
         }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         
@@ -55,7 +59,7 @@
             background: rgba(30, 30, 30, 0.98); backdrop-filter: blur(40px);
             -webkit-backdrop-filter: blur(40px);
             border-top: 1px solid var(--border);
-            border-radius: 50px 50px 0 0;
+            border-radius: 30px 30px 0 0;
             padding: 20px; 
             padding-bottom: calc(10px + env(safe-area-inset-bottom));
             display: flex; flex-direction: column; gap: 12px; z-index: 1000;
@@ -63,17 +67,16 @@
 
         .input-row { display: flex; gap: 8px; width: 100%; align-items: center; }
         
-        /* --- BORDER RADIUS CONTROLS --- */
         input[type="text"] { 
             background: #000; border: 1px solid var(--border); color: white; 
-            padding: 0 18px; border-radius: 15px; /* <--- CHANGE RADIUS HERE */
+            padding: 0 18px; border-radius: var(--radius); 
             font-size: 15px; flex: 1; height: 48px; 
         }
 
         input[type="date"] { 
             position: relative; color-scheme: dark; background: #000; 
             border: 1px solid var(--border); color: white; 
-            border-radius: 15px; /* <--- CHANGE RADIUS HERE */
+            border-radius: var(--radius); 
             padding: 0 14px; font-size: 13px; width: 140px; height: 48px; 
             text-align: center; display: flex; align-items: center; justify-content: center;
         }
@@ -87,7 +90,7 @@
 
         .save-btn { 
             width: 100%; background: #ffffff; color: #000; border: none; 
-            height: 50px; border-radius: 50px; font-weight: 900; 
+            height: 50px; border-radius: var(--radius); font-weight: 900; 
             text-transform: uppercase; font-size: 14px; cursor: pointer;
         }
 
