--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         :root {
             --bg-dark: #121212; --bg-card: #1e1e1e; --sidebar-bg: #181818;
             --border: #2a2a2a; --text-main: #ffffff; --text-dim: #888888;
-            --accent: #333333; --radius: 15px; /* Control all box roundness here */
+            --accent: #333333; --radius: 15px; 
         }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         
@@ -143,6 +143,9 @@
     const db = firebase.firestore();
     const provider = new firebase.auth.GoogleAuthProvider();
 
+    // Haptic Function
+    function haptic() { if (window.navigator && window.navigator.vibrate) { window.navigator.vibrate(10); } }
+
     function popLogin() { auth.signInWithPopup(provider).catch(e => alert(e.message)); }
 
     auth.onAuthStateChanged((user) => {
@@ -168,6 +171,7 @@
     }
 
     function saveTask() {
+        haptic();
         const name = document.getElementById('itemName').value;
         const date = document.getElementById('itemDate').value;
         if(!name || !date) return;
@@ -179,15 +183,15 @@
         document.getElementById('itemDate').value = '';
     }
 
-    window.deleteTask = function(id) { db.collection("tasks").doc(id).delete(); };
-    window.setTab = function(t) { activePlanner = t; render(); };
+    window.deleteTask = function(id) { haptic(); db.collection("tasks").doc(id).delete(); };
+    window.setTab = function(t) { haptic(); activePlanner = t; render(); };
 
-    // --- ENHANCED LONG PRESS LOGIC ---
     let pressTimer;
     function startPress(planner) {
         pressTimer = window.setTimeout(function() {
+            haptic();
             handleDeletePlanner(planner);
-        }, 800); // 800ms hold time
+        }, 800);
     }
     function cancelPress() { clearTimeout(pressTimer); }
 
@@ -201,6 +205,7 @@
     }
 
     function createNewList() {
+        haptic();
         const n = prompt("New Category:");
         if(n && !planners.includes(n)) { planners.push(n); activePlanner = n; render(); }
     }
